test_programs/compile_failure/noirc_frontend_tests_unresolved_path/src/main.nr

        fn main(x : Field) {
            let _z = some::path::to::a::func(x);
        }
    